 -- Added comalias, doing, exitname, malias, maliasdesc, and password
    tests to VALID() (Issue 211).
 -- Added no_name attribute flag to suppress name on oattribute emits
    (Issue 220).
 -- Added /no_name switch to @verb (Issue 221).
 -- Added stripped_flags configuration option (Issue 200).  This
    affects guests, @chown, @chownall, and @clone.


Bug Fixes:
~~~~~~~~~
 -- Fix over one thousand level 4 warnings.  Jake and Brazil.
 -- Deprecate use of strcpy() and strncpy().  Jake and Brazil.
 -- Use size_t where appropriate.  Jake and Brazil.
 -- Deprecate use of sprintf().  By Brazil.
 -- Deprecate use of localtime().  By Brazil.
 -- Fix 'round(-0.5,0)' --> '-0' to be '0' instead.
 -- Disallow the train command from being used on itself.
 -- Add protection to @chownall that victim be a player object.
 -- Fix uninitialized variable in HASRXLEVEL(). It should have used
    'executor' instead of 'player'.
 -- Fix time_t handling for 64-bit machines. Timezones could be wrong
    for dates earlier than Jan 1 1970 on 64-bit Unix.
 -- Fix @hook for goto command. Being unable to move also affected the
    ability to use other commands. Reported by K hall.
 -- Added checking to convsecs() to return '#-1 INVALID DATE" if first
    argument is outside the supported range.
 -- All but the last part of very Long lines from the network were
    discarded when for very long lines, only the first part should be
    saved.  Not a crashing bug.
 -- Server should not attempt to @clone Created and Modified attributes.
 -- Fix single-character case in pos(). It would never return success.
    Bug introduced in 2.6. It does not appear in 2.4.
 -- Change isdbref() to return '0' instead of '#-1 ISDBEF EXPECTS...'
 -- Fix ANSI overflow bug in ANSI_String_Copy() introduced by using an
    unsigned size_t in place of a signed 'int'. Bug introduced in 2.6.
 -- Add 'other half' of buffer overflow protection to a case in